@@ -54,7 +54,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14000001",
     "Dist::Zilla::Plugin::MetaTests" => 0,
     "Dist::Zilla::Plugin::MetaYAML::Minimal" => 0,
-    "Dist::Zilla::Plugin::MinimumPerl" => 0,
+    "Dist::Zilla::Plugin::MinimumPerl" => "1.004",
     "Dist::Zilla::Plugin::PodCoverageTests" => 0,
     "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
     "Dist::Zilla::Plugin::PodWeaver" => 0,
@@ -155,7 +155,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14000001",
   "Dist::Zilla::Plugin::MetaTests" => 0,
   "Dist::Zilla::Plugin::MetaYAML::Minimal" => 0,
-  "Dist::Zilla::Plugin::MinimumPerl" => 0,
+  "Dist::Zilla::Plugin::MinimumPerl" => "1.004",
   "Dist::Zilla::Plugin::ModuleBuild" => 0,
   "Dist::Zilla::Plugin::PodCoverageTests" => 0,
   "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
