@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.025002
+ [Changed / runtime requires]
+ - Dist::Zilla::Plugin::MinimumPerl 0 → 1.004
 
 2.025001 2015-07-05T03:52:11Z
  [Changed / develop requires]
